--- a/srcs/.env
+++ b/srcs/.env
@@ -1,4 +1,21 @@
+DOMAIN_NAME=aehrlich.42.fr
+CERTS_=/etc/ssl/certs/nginx-selfsigned.crt
+
+
+# WORDPRESS SETUP
+WP_TITLE=Inceptinceptinception
+WP_ADMIN_USR=alexehrlich
+WP_ADMIN_PWD=portugues
+WP_ADMIN_EMAIL=alexehrlich@gmx.de
+WP_USR=aehrlich
+WP_EMAIL=aehrlich@student.42berlin.de
+WP_PWD=huhu123
+db_name=mydb
+db_user=maria
+db_pwd=riodejaneiro
+
+
 # MYSQL SETUP
 db1_name=mydb
-db1_user=alex
-db1_pwd=hihi123
+db1_user=maria
+db1_pwd=riodejaneiro
