--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -8,7 +8,8 @@ RUN mkdir /etc/nginx/ssl
 RUN openssl req -newkey rsa:4096 -x509 -sha256 -days 365 -nodes \
 	-out /etc/nginx/ssl/aehrlich.crt \
 	-keyout /etc/nginx/ssl/aehrlich.key \
-	-subj "/C=FR/ST=Paris/L=Paris/0=42 School/OU=aehrlich/CN=aehrlich"
+	-subj "/C=FR/ST=Paris/L=Paris/0=42 School/OU=aehrlich/CN=aehrlich" \
+	-verbose
 
 COPY ./nginx.conf /etc/nginx/conf.d
 
