--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -2,7 +2,8 @@
 FROM debian:oldstable
 
 #update the package-manager and install the mariadb-server-package
-RUN apt-get update -y %% apt-get install mariadb-server -y
+RUN apt-get update -y
+RUN apt-get install mariadb-server -y
 
 #copy the conifg file from the container to local
 COPY ./conf/50-server.cnf /etc/mysql/mariadb.conf.d/
