--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -23,7 +23,7 @@ networks:
 services:
   nginx:
     container_name: nginx
-    build: ./requirements/nginx/.
+    build: ./requirements/nginx
     image: nginx:42
     ports:
      - "443:443"
@@ -38,7 +38,7 @@ services:
     restart: always
   wordpress:
     container_name: wordpress
-    build: ./requirements/wordpress/.
+    build: ./requirements/wordpress
     image: wordpress:42
     depends_on:
       - mariadb
@@ -51,7 +51,7 @@ services:
     restart: always
   mariadb:
     container_name: mariadb
-    build: ./requirements/mariadb/.
+    build: ./requirements/mariadb
     image: mariadb:42
     volumes:
       - mariadb:/var/lib/mysql
