--- a/srcs/.env
+++ b/srcs/.env
@@ -1,21 +1,17 @@
-DOMAIN_NAME=aehrlich.42.fr
-CERTS_=/etc/ssl/certs/nginx-selfsigned.crt
+# WORDPRESS ADMIN:
+DOMAIN_NAME=ycardona.42.fr
+SITE_TITLE=Inception
+WP_ADMIN=ycardona
+WP_ADMIN_PSWD=1234
+WP_ADMIN_EMAIL=ycardona@student.42berlin.de
 
+# WORDPRESS USER:
+WP_USER=wp_user
+WP_USER_EMAIL=wp_user@mail.com
+WP_USER_PSWD=wp1234
 
-# WORDPRESS SETUP
-WP_TITLE=Inceptinceptinception
-WP_ADMIN_USR=alexehrlich
-WP_ADMIN_PWD=portugues
-WP_ADMIN_EMAIL=alexehrlich@gmx.de
-WP_USR=aehrlich
-WP_EMAIL=aehrlich@student.42berlin.de
-WP_PWD=huhu123
-db_name=mydb
-db_user=maria
-db_pwd=riodejaneiro
-
-
-# MYSQL SETUP
-db1_name=mydb
-db1_user=maria
-db1_pwd=riodejaneiro
+# MARIADB SETUP:
+SQL_DATABASE=wp_database
+SQL_USER=mariadb_user
+SQL_PSWD=mariadb1234
+SQL_ROOT_PSWD=root1234
