--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,62 +1,65 @@
-version: "3.5"
-
-volumes:
-        wordpress:
-                name: wordpress
-                driver: local
-                driver_opts:
-                        device: /home/aehrlich/data/wordpress
-                        o: bind
-                        type: none
-        mariadb:
-                name: mariadb
-                driver: local
-                driver_opts:
-                        device: /home/aehrlich/data/mariadb
-                        o: bind
-                        type: none
-
-networks:
-  inception:
-    name: inception
+version: "3.8"
 
 services:
-  nginx:
-    container_name: nginx
-    build: ./requirements/nginx
-    image: nginx:42
-    ports:
-     - "443:443"
-    depends_on:
-      - wordpress
-    volumes:
-     - wordpress:/var/www/html
-    networks:
-      - inception
-    env_file:
-      - .env
-    restart: always
-  wordpress:
-    container_name: wordpress
-    build: ./requirements/wordpress
-    image: wordpress:42
-    depends_on:
-      - mariadb
-    volumes:
-      - wordpress:/var/www/html
-    env_file:
-      - .env
-    networks:
-      - inception
-    restart: always
-  mariadb:
-    container_name: mariadb
-    build: ./requirements/mariadb
-    image: mariadb:42
-    volumes:
-      - mariadb:/var/lib/mysql
-    env_file:
-      - .env
-    networks:
-      - inception
-    restart: always
+    nginx:
+        image: nginx
+        container_name: nginx
+        env_file: .env
+        volumes:
+            - wordpress_volume:/var/www/wordpress
+        networks:
+            - inception
+        depends_on:
+            - wordpress
+        build:
+            context: requirements/nginx
+            dockerfile: Dockerfile
+        ports:
+            - 443:443
+        restart: always
+
+    mariadb:
+        image: mariadb
+        container_name: mariadb
+        env_file: .env
+        volumes:
+            - mariadb_volume:/var/lib/mysql
+        networks:
+            - inception
+        build:
+            context: requirements/mariadb
+            dockerfile: Dockerfile
+        restart: always
+    
+    wordpress:
+        image: wordpress
+        container_name: wordpress
+        volumes:
+            - wordpress_volume:/var/www/wordpress
+        networks:
+            - inception
+        depends_on:
+            - mariadb
+        env_file: .env
+        build:
+            context: requirements/wordpress
+            dockerfile: Dockerfile
+        restart: always
+
+volumes:
+    wordpress_volume:
+        driver: local
+        driver_opts:
+            type: 'none'
+            o: 'bind'
+            device: '/home/data/wordpress'
+    mariadb_volume:
+        driver: local
+        driver_opts:
+            type: 'none'
+            o: 'bind'
+            device: '/home/data/mariadb'
+
+networks:
+    inception:
+        driver: bridge
