--- a/srcs/.env
+++ b/srcs/.env
@@ -1,9 +1,9 @@
 # WORDPRESS ADMIN:
-DOMAIN_NAME=ycardona.42.fr
-SITE_TITLE=Inception
-WP_ADMIN=ycardona
-WP_ADMIN_PSWD=1234
-WP_ADMIN_EMAIL=ycardona@student.42berlin.de
+DOMAIN_NAME=aehrlich.42.fr
+SITE_TITLE=Inceptinceptinceptinceptinceptinception
+WP_ADMIN=aehrlich
+WP_ADMIN_PSWD=riodejaneiro
+WP_ADMIN_EMAIL=aehrlich@student.42berlin.de
 
 # WORDPRESS USER:
 WP_USER=wp_user
@@ -14,4 +14,4 @@ WP_USER_PSWD=wp1234
 SQL_DATABASE=wp_database
 SQL_USER=mariadb_user
 SQL_PSWD=mariadb1234
-SQL_ROOT_PSWD=root1234
+SQL_ROOT_PSWD=saopaulo
