--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -2,7 +2,7 @@ server {
 	listen 443 ssl;
 	listen [::]:443 ssl;
 
-	server_name ycardona.42.fr;
+	server_name aehrlich.42.fr;
 	root /var/www/wordpress;
 	index index.php;
 
