--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,22 +1,37 @@
 server {
+	#define the ports to listen to --> HTTPS
 	listen 443 ssl;
-	listen [::]:443 ssl;
+	listen [::]:443 ssl; 
 
+	#set the host name, is set in the /etc/hosts to 127.0.0.1
 	server_name aehrlich.42.fr;
+
+	#define where the server should look for the files to serve and the default index file
 	root /var/www/wordpress;
 	index index.php;
 
+	#enable and setup SSL for the server with generated certificate and key
+	# by the docker file
+	# SSL: Secure Socket Layer
+	# TSL: Transport Layer Security 
 	ssl on;
 	ssl_protocols TLSv1.2 TLSv1.3;
 	ssl_certificate /etc/nginx/ssl/TSL_certificate.crt;
 	ssl_certificate_key /etc/nginx/ssl/TSL_private.key;
 
+	#define the entry location for the server
+	# it tries to serve the requestd URI or the directory URI/
+	# if it doenst exist, 404 is served
 	location / {
 		try_files $uri $uri/ =404;
 	}
 
+	# define locations with the REGEX .php. All requested php file should go 
+	# through fastCGI-SErver (Wordpress) which listens at 9000.
+	# ~: case senisitive
+	# \ is escaping the dot character
 	location ~ \.php {
 		include snippets/fastcgi-php.conf;
 		fastcgi_pass wordpress:9000;
-	}    
+	}
 }
