--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -67,13 +67,13 @@ volumes:
             #directly map the host to the container
             o: 'bind'
             #specify the path on the host that will be mounted to the volume
-            device: '/home/data/wordpress'
+            device: '/home/aehrlich/data/wordpress'
     mariadb_volume:
         driver: local
         driver_opts:
             type: 'none'
             o: 'bind'
-            device: '/home/data/mariadb'
+            device: '/home/aehrlich/data/mariadb'
 
 #define a custom network for communication between the containers
 networks:
