--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,5 +1,5 @@
-#FROM debian:buster
-FROM debian:oldstable
+FROM debian:buster
+#FROM debian:oldstable
 
 #listen to port 9000 during runtime (Fast CGI)
 EXPOSE 9000
